--- a/backend/package.json
+++ b/backend/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "mongoose": "^5.10.0"
+    "mongoose": "^5.10.0",
+    "supertest": "latest",
+    "jest": "^26.4.2"
   }
 }
