--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "another.test",
+  "name": "neighbours.test",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1",
     "mongoose": "^5.10.0",
     "supertest": "latest",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "@jest/globals": "latest"
   }
 }
