--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - pushd ./frontend/
   - npm install
   - npm run build
+  - mkdir ../backend/public
   - cp -r ./build/* ../backend/public
   - popd
   - cd ./backend
