--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ before_install:
 jobs:
   include:
     - stage: test
-      script: npm install | npm run test #--prefix ./backend
+      script: 
+        - npm install 
+        - npm run test #--prefix ./backend
     - stage: deploy to production
       deploy:
         provider: heroku
