--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
   - npm install
   - npm run build
   - mkdir ../backend/public
-  - cp -r ./build/* ../backend/public
+  - cp -r ./public/* ./dist/
+  - cp -r ./dist/* ../backend/public
   - popd
   - cd ./backend
 
